--- a/ViewPagerGallery/res/layout/activity_main.xml
+++ b/ViewPagerGallery/res/layout/activity_main.xml
@@ -2,23 +2,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <LinearLayout
-        android:id="@+id/container"
+    <com.sherwin.gallerypager.GalleryViewPagerLayout
+        android:id="@+id/gallery_pager_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:clipChildren="false"
-        android:gravity="center_horizontal"
-        android:layerType="software"
-        android:orientation="vertical" >
-        <android.support.v4.view.ViewPager
-            android:id="@+id/viewpager"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
-            android:overScrollMode="never"
-            android:clipChildren="false" >
-        </android.support.v4.view.ViewPager>
-    </LinearLayout>
+        android:layout_height="match_parent" >
+    </com.sherwin.gallerypager.GalleryViewPagerLayout>
 
 </RelativeLayout>
